--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
       <section class="about">
         <h2>About Me</h2>
         <p>
-          I’m a <strong> Physics graduate</strong> from Universiti Malaya (UM).
-          I am passionate about nuclear physics, coding & open source.
-          development.
+          I’m a <strong> Physics fresh graduate</strong> from Universiti Malaya
+          (UM). I am passionate about nuclear physics, coding & open source.
+          development. I am current pursuing Masters Degree in Data science. I
+          am also working concurrently while doing my Masters as a Backend
+          Developer.
         </p>
       </section>
 
@@ -72,17 +74,6 @@
           </div>
         </div>
       </section>
-
-      <section class="contact">
-        <h2>Contact</h2>
-        <p>Feel free to reach out via:</p>
-        <ul class="contact-list">
-          <li><a href="mailto:you@example.com">you@example.com</a></li>
-          <li><a href="https://github.com/yourusername">GitHub</a></li>
-          <li><a href="https://linkedin.com/in/yourusername">LinkedIn</a></li>
-        </ul>
-      </section>
-    </main>
 
     <footer class="footer">
       <p>© 2025 Taufiq Haikal</p>
