Added github and linkedin logo

--- a/index.html
+++ b/index.html
@@ -49,16 +49,37 @@
 				<h2 style="font-family: 'JetBrains Mono', monospace; font-weight: 600;">Contact Me</h2>
         <div class="card-grid">
           <div class="card">
-												<h3 style="font-family: 'JetBrains Mono', monospace; font-weight: 600;">GitHub</h3>
+						<svg
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 24 24"
+      fill="currentColor"
+      width="30"
+      height="30"
+      style="color: var(--fg);"
+    >
+      <path
+        d="M12 .5C5.65.5.5 5.65.5 12a11.5 11.5 0 0 0 7.85 10.93c.57.1.78-.25.78-.55v-2.02c-3.19.7-3.86-1.54-3.86-1.54-.52-1.32-1.28-1.67-1.28-1.67-1.05-.72.08-.7.08-.7 1.16.08 1.77 1.2 1.77 1.2 1.03 1.76 2.7 1.25 3.36.95.1-.75.4-1.25.73-1.54-2.55-.29-5.23-1.27-5.23-5.63 0-1.25.45-2.26 1.2-3.06-.12-.3-.52-1.5.12-3.12 0 0 .98-.31 3.2 1.18a10.9 10.9 0 0 1 5.84 0c2.22-1.5 3.2-1.18 3.2-1.18.64 1.62.24 2.82.12 3.12.75.8 1.2 1.81 1.2 3.06 0 4.38-2.69 5.34-5.25 5.62.4.34.77 1.02.77 2.06v3.06c0 .3.2.66.78.55A11.5 11.5 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5z"
+      />
+    </svg>
             <p>My linux systems configurations, LaTeX template, and open source projects!</p>
             <a href="https://github.com/unlucky-shen" class="button"
-              >View GitHub</a
-            >
+              >View GitHub</a>
           </div>
           <div class="card">
-						<h3 style="font-family: 'JetBrains Mono', monospace; font-weight: 600;">LinkedIn</h3>
+						<svg
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 24 24"
+    fill="currentColor"
+    width="30"
+    height="30"
+    style="color: var(--fg);"
+  >
+    <path
+      d="M20.447 20.452H17.2v-5.568c0-1.328-.024-3.037-1.852-3.037-1.854 0-2.138 1.445-2.138 2.94v5.665H9.06V9h3.112v1.561h.044c.435-.825 1.497-1.694 3.08-1.694 3.295 0 3.9 2.168 3.9 4.988v6.597zM5.337 7.433a1.81 1.81 0 1 1 0-3.621 1.81 1.81 0 0 1 0 3.621zM6.784 20.452H3.89V9h2.894v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.728v20.543C0 23.226.792 24 1.771 24h20.451C23.2 24 24 23.226 24 22.271V1.728C24 .774 23.2 0 22.225 0z"
+    />
+  </svg>
             <p>
-              -
+						Connect with me on LinkedIn for projects, collaborations, and updates!
             </p>
             <a href="#" class="button">View LinkedIn</a>
           </div>
