--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </svg>
             <p>My linux systems configurations, LaTeX template, and open source projects!</p>
             <a href="https://github.com/unlucky-shen" class="button"
-              >View GitHub</a>
+              >My GitHub</a>
           </div>
           <div class="card">
 						<svg
@@ -81,7 +81,7 @@
             <p>
 						Connect with me on LinkedIn for projects, collaborations, and updates!
             </p>
-            <a href="#" class="button">View LinkedIn</a>
+            <a href="#" class="button">My LinkedIn</a>
           </div>
         </div>
       </section>
