Added more contents and animations

--- a/index.html
+++ b/index.html
@@ -25,12 +25,47 @@
       </div>
     </header>
 
+		<div class="blackhole-bg"></div>
+
     <main class="container">
       <section class="about">
 				<h2 style="font-family: 'JetBrains Mono', monospace; font-weight: 600;">About Me</h2>
         <p style="text-align: justify;">
 				Fresh graduate from the University of Malaya with a Bachelor's Degree in Physics and currently pursuing a Masters Degree in Data Science. Passionate about nuclear physics, coding, and open-source development, with a strong interest in nanomaterials and quantum materials. Currently pursuing a Master’s Degree in Data Science, while concurrently working as a Part-Time Backend Developer at GECC UM. Completed an Engineering Internship at the Malaysian Nuclear Agency, gaining exposure to applied nuclear technologies and research. Skilled in backend development, data analysis, and scientific computation, with a commitment to bridging the gap between scientific research and software innovation.
         </p>
+      </section>
+
+      <section class="experience">
+				<h2 style="font-family: 'JetBrains Mono', monospace; font-weight: 600;">Experience</h2>
+				<div class="experience-item">
+    <h3>Backend Developer <span> | UM GECC</span></h3>
+    <p class="period">November 2025 – Present | Kuala Lumpur, Malaysia</p>
+    <ul style="text-align: justify;">
+      <li>Refactoring backend systems by migrating the database to PostgreSQL for improved performance and reliability.</li>
+      <li>Developing and maintaining core backend services using Rust, including API design, database queries, and service integrations.</li>
+      <li>Modernizing the backend architecture by adopting more robust and scalable frameworks to enhance system stability.</li>
+    </ul>
+  </div>
+
+  <div class="experience-item">
+    <h3>Engineering Intern<span> | Malaysian Nuclear Agency</span></h3>
+    <p class="period">March 2025 – July 2025 | Kuala Lumpur, Malaysia</p>
+    <ul style="text-align: justify;">
+      <li>Successfully developed and documented procedures for advanced Non-Destructive Testing (NDT) methods, such as the Digital Radiography and Infrared Thermography for composite materials.</li>
+      <li>Mastered Autodesk Inventor to create functional engineering drawings for composites component fabrication.</li>
+      <li>Successfully devised shielding apparatus for safe operation of electromagnetic radiation.</li>
+    </ul>
+  </div>
+
+  <div class="experience-item">
+    <h3>Final Year Project<span> | Universiti Malaya</span></h3>
+    <p class="period">September 2024 – January 2025 | Kuala Lumpur, Malaysia</p>
+    <ul style="text-align: justify;">
+      <li>Synthesized manganese silicide (MnSi) nanowires using thermal chemical vapor deposition (TCVD) and silicidation growth mechanism.</li>
+			<li>Conducted FESEM and XRD analysis to study nanowire morphology, structure, and phase composition, authenticating the presence of crystalline phase Mn<sub>4.01</sub>Si<sub>11.71</sub></li>
+      <li>Demonstrated that controlling sample distance within the TCVD tube furnace influences nanowires structure.</li>
+    </ul>
+  </div>
       </section>
 
       <section class="skills">
