refactor, and edited index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section class="about">
 				<h2 style="font-family: 'JetBrains Mono', monospace; font-weight: 600;">About Me</h2>
         <p style="text-align: justify;">
-				Fresh graduate from the University of Malaya with a Bachelor's Degree in Physics and currently pursuing a Masters Degree in Data Science. Passionate about nuclear physics, coding, and open-source development, with a strong interest in nanomaterials and quantum materials. Currently pursuing a Master’s Degree in Data Science, while concurrently working as a Part-Time Backend Developer at GECC UM. Completed an Engineering Internship at the Malaysian Nuclear Agency, gaining exposure to applied nuclear technologies and research. Skilled in backend development, data analysis, and scientific computation, with a commitment to bridging the gap between scientific research and software innovation.
+				A graduate from the University Malaya with a Bachelor's Degree in Physics and currently pursuing a Masters Degree in Data Science. Passionate about nuclear physics, coding, and open-source development, with a strong interest in nanomaterials and quantum materials. Currently pursuing a Master’s Degree in Data Science, while concurrently working as a Backend Developer at GECC UM. Completed an Engineering Internship at the Malaysian Nuclear Agency, gaining exposure to applied nuclear technologies and research, with a commitment to bridging the gap between scientific research and software innovation.
         </p>
       </section>
 
