Refactored styles.css & index.html, also added .js script inside html for appearing animation

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taufiq Haikal — Physicist, Developer, Tech Enthusiast</title>
 
-    <!-- Nordic color theme -->
+    <!-- Use nordic.css colors -->
     <link rel="stylesheet" href="nordic.css" />
-    <!-- Main site styles -->
+    <!-- Content styles -->
     <link rel="stylesheet" href="styles.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,112 +16,211 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
-    <header class="header">
+    <header class="header fade-section">
       <div class="container">
         <h1 class="name">Taufiq Haikal Mohamad Suffian</h1>
         <p class="subtitle">Physicist • Developer • Tech Enthusiast</p>
       </div>
     </header>
 
-		<div class="blackhole-bg"></div>
+    <div class="blackhole-bg"></div>
 
     <main class="container">
-      <section class="about">
-				<h2 style="font-family: 'JetBrains Mono', monospace; font-weight: 600;">About Me</h2>
-        <p style="text-align: justify;">
-				A graduate from the University Malaya with a Bachelor's Degree in Physics and currently pursuing a Masters Degree in Data Science. Passionate about nuclear physics, coding, and open-source development, with a strong interest in nanomaterials and quantum materials. Currently pursuing a Master’s Degree in Data Science, while concurrently working as a Backend Developer at GECC UM. Completed an Engineering Internship at the Malaysian Nuclear Agency, gaining exposure to applied nuclear technologies and research, with a commitment to bridging the gap between scientific research and software innovation.
+      <section class="about fade-section">
+        <h2
+          style="
+            font-family: &quot;JetBrains Mono&quot;, monospace;
+            font-weight: 600;
+          "
+        >
+          About Me
+        </h2>
+        <p style="text-align: justify">
+          A graduate from the University Malaya with a Bachelor's Degree in
+          Physics and currently pursuing a Masters Degree in Data Science.
+          Passionate about nuclear physics, coding, and open-source development,
+          with a strong interest in nanomaterials and quantum materials.
+          Currently pursuing a Master’s Degree in Data Science, while
+          concurrently working as a Backend Developer at GECC UM. Completed an
+          Engineering Internship at the Malaysian Nuclear Agency, gaining
+          exposure to applied nuclear technologies and research, with a
+          commitment to bridging the gap between scientific research and
+          software innovation.
         </p>
       </section>
 
-      <section class="experience">
-				<h2 style="font-family: 'JetBrains Mono', monospace; font-weight: 600;">Experience</h2>
-				<div class="experience-item">
-    <h3>Backend Developer <span>  |  UM GECC</span></h3>
-    <p class="period">November 2025 – Present | Kuala Lumpur, Malaysia</p>
-    <ul style="text-align: justify;">
-      <li>Refactoring backend systems by migrating the database to PostgreSQL for improved performance and reliability.</li>
-      <li>Developing and maintaining core backend services using Rust, including API design, database queries, and service integrations.</li>
-      <li>Modernizing the backend architecture by adopting more robust and scalable frameworks to enhance system stability.</li>
-    </ul>
-  </div>
+      <section class="experience fade-section">
+        <h2
+          style="
+            font-family: &quot;JetBrains Mono&quot;, monospace;
+            font-weight: 600;
+          "
+        >
+          My Experience
+        </h2>
+        <div class="experience-item">
+          <h3>Backend Developer <span> | UM GECC</span></h3>
+          <p class="period">November 2025 – Present | Kuala Lumpur, Malaysia</p>
+          <ul style="text-align: justify">
+            <li>
+              Refactoring backend systems by migrating the database to
+              PostgreSQL for improved performance and reliability.
+            </li>
+            <li>
+              Developing and maintaining core backend services using Rust,
+              including API design, database queries, and service integrations.
+            </li>
+            <li>
+              Modernizing the backend architecture by adopting more robust and
+              scalable frameworks to enhance system stability.
+            </li>
+          </ul>
+        </div>
 
-  <div class="experience-item">
-    <h3>Engineering Intern<span>  |  Malaysian Nuclear Agency</span></h3>
-    <p class="period">March 2025 – July 2025 | Kuala Lumpur, Malaysia</p>
-    <ul style="text-align: justify;">
-      <li>Successfully developed and documented procedures for advanced Non-Destructive Testing (NDT) methods, such as the Digital Radiography and Infrared Thermography for composite materials.</li>
-      <li>Mastered Autodesk Inventor to create functional engineering drawings for composites component fabrication.</li>
-      <li>Successfully devised shielding apparatus for safe operation of electromagnetic radiation.</li>
-    </ul>
-  </div>
+        <div class="experience-item">
+          <h3>Engineering Intern<span> | Malaysian Nuclear Agency</span></h3>
+          <p class="period">March 2025 – July 2025 | Kuala Lumpur, Malaysia</p>
+          <ul style="text-align: justify">
+            <li>
+              Successfully developed and documented procedures for advanced
+              Non-Destructive Testing (NDT) methods, such as Digital Radiography
+              and Infrared Thermography for composite materials.
+            </li>
+            <li>
+              Mastered Autodesk Inventor to create functional engineering
+              drawings for composites component fabrication.
+            </li>
+            <li>
+              Successfully devised shielding apparatus for safe operation of
+              electromagnetic radiation.
+            </li>
+          </ul>
+        </div>
 
-  <div class="experience-item">
-    <h3>Final Year Project<span>  |  Universiti Malaya</span></h3>
-    <p class="period">September 2024 – January 2025 | Kuala Lumpur, Malaysia</p>
-    <ul style="text-align: justify;">
-      <li>Synthesized manganese silicide (MnSi) nanowires using thermal chemical vapor deposition (TCVD) and silicidation growth mechanism.</li>
-			<li>Conducted FESEM and XRD analysis to study nanowire morphology, structure, and phase composition, authenticating the presence of crystalline phase Mn<sub>4.01</sub>Si<sub>11.71</sub></li>
-      <li>Demonstrated that controlling sample distance within the TCVD tube furnace influences nanowires structure.</li>
-    </ul>
-  </div>
+        <div class="experience-item">
+          <h3>Final Year Project<span> | Universiti Malaya</span></h3>
+          <p class="period">
+            September 2024 – January 2025 | Kuala Lumpur, Malaysia
+          </p>
+          <ul style="text-align: justify">
+            <li>
+              Synthesized manganese silicide (MnSi) nanowires using thermal
+              chemical vapor deposition (TCVD) and silicidation growth
+              mechanism.
+            </li>
+            <li>
+              Conducted FESEM and XRD analysis to study nanowire morphology,
+              structure, and phase composition, authenticating the presence of
+              crystalline phase Mn<sub>4.01</sub>Si<sub>11.71</sub>.
+            </li>
+            <li>
+              Demonstrated that controlling sample distance within the TCVD tube
+              furnace influences nanowire structure.
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="skills">
-				<h2 style="font-family: 'JetBrains Mono', monospace; font-weight: 600;">Skills</h2>
+      <section class="skills fade-section">
+        <h2
+          style="
+            font-family: &quot;JetBrains Mono&quot;, monospace;
+            font-weight: 600;
+          "
+        >
+          Skills
+        </h2>
         <ul>
           <li>
-            <strong>Programming :</strong> Rust, Python, LaTeX, Lua, R, HTML, CSS, SQL
+            <strong>Programming :</strong> Rust, Python, LaTeX, Lua, R, HTML,
+            CSS, SQL
           </li>
-          <li><strong>Linux Systems :</strong> Debian, Nix, Arch</li>
+          <li><strong>Linux Systems :</strong> Arch, Debian, Nix</li>
           <li><strong>Database Management:</strong> PostgreSQL</li>
           <li><strong>Language Proficiency:</strong> English, Malay</li>
         </ul>
       </section>
 
-      <section class="reveal">
-				<h2 style="font-family: 'JetBrains Mono', monospace; font-weight: 600;">Contact Me</h2>
+      <section class="reveal fade-section" id="rmborder">
+        <h2
+          style="
+            font-family: &quot;JetBrains Mono&quot;, monospace;
+            font-weight: 600;
+          "
+        >
+          Contact Me
+        </h2>
         <div class="card-grid">
           <div class="card">
-						<svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-      fill="currentColor"
-      width="30"
-      height="30"
-      style="color: var(--fg);"
-    >
-      <path
-        d="M12 .5C5.65.5.5 5.65.5 12a11.5 11.5 0 0 0 7.85 10.93c.57.1.78-.25.78-.55v-2.02c-3.19.7-3.86-1.54-3.86-1.54-.52-1.32-1.28-1.67-1.28-1.67-1.05-.72.08-.7.08-.7 1.16.08 1.77 1.2 1.77 1.2 1.03 1.76 2.7 1.25 3.36.95.1-.75.4-1.25.73-1.54-2.55-.29-5.23-1.27-5.23-5.63 0-1.25.45-2.26 1.2-3.06-.12-.3-.52-1.5.12-3.12 0 0 .98-.31 3.2 1.18a10.9 10.9 0 0 1 5.84 0c2.22-1.5 3.2-1.18 3.2-1.18.64 1.62.24 2.82.12 3.12.75.8 1.2 1.81 1.2 3.06 0 4.38-2.69 5.34-5.25 5.62.4.34.77 1.02.77 2.06v3.06c0 .3.2.66.78.55A11.5 11.5 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5z"
-      />
-    </svg>
-            <p>My linux systems configurations, LaTeX template, and open source projects!</p>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              width="30"
+              height="30"
+              style="color: var(--fg)"
+            >
+              <path
+                d="M12 .5C5.65.5.5 5.65.5 12a11.5 11.5 0 0 0 7.85 10.93c.57.1.78-.25.78-.55v-2.02c-3.19.7-3.86-1.54-3.86-1.54-.52-1.32-1.28-1.67-1.28-1.67-1.05-.72.08-.7.08-.7 1.16.08 1.77 1.2 1.77 1.2 1.03 1.76 2.7 1.25 3.36.95.1-.75.4-1.25.73-1.54-2.55-.29-5.23-1.27-5.23-5.63 0-1.25.45-2.26 1.2-3.06-.12-.3-.52-1.5.12-3.12 0 0 .98-.31 3.2 1.18a10.9 10.9 0 0 1 5.84 0c2.22-1.5 3.2-1.18 3.2-1.18.64 1.62.24 2.82.12 3.12.75.8 1.2 1.81 1.2 3.06 0 4.38-2.69 5.34-5.25 5.62.4.34.77 1.02.77 2.06v3.06c0 .3.2.66.78.55A11.5 11.5 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5z"
+              />
+            </svg>
+            <p>
+              My linux systems configurations, LaTeX template, and open source
+              projects!
+            </p>
             <a href="https://github.com/unlucky-shen" class="button"
-              >My GitHub</a>
+              >My GitHub</a
+            >
           </div>
           <div class="card">
-						<svg
-    xmlns="http://www.w3.org/2000/svg"
-    viewBox="0 0 24 24"
-    fill="currentColor"
-    width="30"
-    height="30"
-    style="color: var(--fg);"
-  >
-    <path
-      d="M20.447 20.452H17.2v-5.568c0-1.328-.024-3.037-1.852-3.037-1.854 0-2.138 1.445-2.138 2.94v5.665H9.06V9h3.112v1.561h.044c.435-.825 1.497-1.694 3.08-1.694 3.295 0 3.9 2.168 3.9 4.988v6.597zM5.337 7.433a1.81 1.81 0 1 1 0-3.621 1.81 1.81 0 0 1 0 3.621zM6.784 20.452H3.89V9h2.894v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.728v20.543C0 23.226.792 24 1.771 24h20.451C23.2 24 24 23.226 24 22.271V1.728C24 .774 23.2 0 22.225 0z"
-    />
-  </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              width="30"
+              height="30"
+              style="color: var(--fg)"
+            >
+              <path
+                d="M20.447 20.452H17.2v-5.568c0-1.328-.024-3.037-1.852-3.037-1.854 0-2.138 1.445-2.138 2.94v5.665H9.06V9h3.112v1.561h.044c.435-.825 1.497-1.694 3.08-1.694 3.295 0 3.9 2.168 3.9 4.988v6.597zM5.337 7.433a1.81 1.81 0 1 1 0-3.621 1.81 1.81 0 0 1 0 3.621zM6.784 20.452H3.89V9h2.894v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.728v20.543C0 23.226.792 24 1.771 24h20.451C23.2 24 24 23.226 24 22.271V1.728C24 .774 23.2 0 22.225 0z"
+              />
+            </svg>
             <p>
-						Connect with me on LinkedIn for projects, collaborations, and updates!
+              Connect with me on LinkedIn for projects, collaborations, and
+              updates!
             </p>
-            <a href="https://www.linkedin.com/in/taufiq-haikal-397363354/" class="button">My LinkedIn</a>
+            <a
+              href="https://www.linkedin.com/in/taufiq-haikal-397363354/"
+              class="button"
+              >My LinkedIn</a
+            >
           </div>
         </div>
       </section>
+    </main>
 
-    <footer class="footer">
+    <footer class="footer fade-section">
       <p>© 2025 Taufiq Haikal</p>
     </footer>
+
+    <!-- Scroll reveal script -->
+    <script>
+      const fadeSections = document.querySelectorAll(".fade-section");
+
+      const observer = new IntersectionObserver(
+        (entries) => {
+          entries.forEach((entry) => {
+            if (entry.isIntersecting) {
+              entry.target.classList.add("visible");
+            }
+          });
+        },
+        { threshold: 0.2 },
+      );
+
+      fadeSections.forEach((section) => observer.observe(section));
+    </script>
   </body>
 </html>
